input up to 2 decimals with minimum 0 value

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    </li>
    <li>
     <br><p>How much would you like to convert?</p>
-    <input type="number" id="amount" name="amount"><br><br>  
+    <input type="number" step=".01" min="0" id="amount" name="amount"><br><br> 
     <button type="submit">Convert!</button>
    </li>
   </ul>
