--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    </li>
    <li>
     <br><p>How much would you like to convert?</p>
-    <input type="number" id="amount" name="amount"><br><br>  
+    <input type="number" id="amount" name="amount" step=".01"><br><br>  
     <button type="submit">Convert!</button>
    </li>
   </ul>
